--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
 }
 
 main {
-    background-color: var(--teal-mid);
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 nav {
@@ -188,7 +188,7 @@ nav .social-icons a:hover, nav .social-icons a:focus {
 
 #carousel {
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.85);
     font-family: 'Futura';
 }
 .carousel {
@@ -242,7 +242,6 @@ nav .social-icons a:hover, nav .social-icons a:focus {
 .action-btn {
     position: absolute;
     top: 85%;
-
     background-color: rgba(0, 0, 0, 0.3); /* Darker shade on hover */
     margin-top: 20px; /* Space between the video and the button */
     padding: 10px 20px;
@@ -266,20 +265,20 @@ nav .social-icons a:hover, nav .social-icons a:focus {
 
 .button {
     font-family: 'Futura';
-    font-size: 3rem;
-    font-weight: 600;
-    background-color: var(--color-quinary);
-    color: var(--color-secondary);
-    border: none;
+    background-color: rgba(0, 0, 0, 0.3); /* Darker shade on hover */
+    margin-top: 20px; /* Space between the video and the button */
     padding: 10px 20px;
+    margin-bottom: 50px;
+    font-size: 2rem;
+    font-weight: 600;
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    text-align: center;
-    margin: 10px 5px;
+    font-family: 'Futura';
+    color: white;
+    background-color: transparent;
+    border:1px solid white; /* Adding white border */
+    border-radius: 0; /* Making the border square */
     cursor: pointer;
-    border-radius: 5px;
+    transition: background-color 0.3s ease; /* Smooth transition for hover effect */
 }
 
 .button:hover {
@@ -290,7 +289,7 @@ nav .social-icons a:hover, nav .social-icons a:focus {
 /* Music, Events, Merch Sections */
 #welcome {
     font-family: 'Futura';
-    background: rgba(0, 115, 106, 0.3); /* Adjusted for semi-transparency */
+    background: rgba(0, 0, 0, 0.85); /* Adjusted for semi-transparency */
     text-align: left;
     padding: 50px 20px;
     color: var(--white);
